force-app/main/default/objects/Loan_Application__c/Loan_Application__c.object-meta.xml
<CustomObject>
    <label>Loan Application</label>
    <nameField>
        <displayFormat>VLAS-{0000}</displayFormat>
        <label>Loan Application Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>