force-app/main/default/objects/Loan_Application__c/fields/CERSAI_Status__c.field-meta.xml
<CustomField>
    <fullName>CERSAI_Status__c</fullName>
    <label>CERSAI Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Clear</fullName>
            </value>
            <value>
                <fullName>Blocked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>