force-app/main/default/objects/Loan_Application__c/fields/Loan_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Loan_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Loan Applications</relationshipLabel>
    <relationshipName>Loan_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>