force-app/main/default/objects/Loan_Application__c/validationRules/EMI_mandatory_before_Disbursement.validationRule-meta.xml
<ValidationRule>
    <fullName>EMI_mandatory_before_Disbursement</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Loan_Status__c, &quot;Disbursed&quot;),
  ISBLANK(EMI_Amount__c)
)</errorConditionFormula>
    <errorMessage>Please calculate and add the EMI amount before disbursing the loan.</errorMessage>
</ValidationRule>