force-app/main/default/objects/Loan_Application__c/validationRules/Requested_Amount_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Requested_Amount_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Approved_Amount__c  &gt;= Requested_Amount__c</errorConditionFormula>
    <errorMessage>Please request the loan amount lesser than or equal to approved amount.</errorMessage>
</ValidationRule>